--- a/MeuSite/bio.html.html
+++ b/MeuSite/bio.html.html
@@ -18,9 +18,9 @@
 		-->
 		
 		<ul>
-			<li><a href="mailto:matheus.costa@aluno.ifsp.edu.br">E-mail</a></li>
-			<li><a href="https://www.facebook.com/mattymcosta">Facebook</a></li>
-			<li><a href="https://www.instagram.com/mathmcosta">Instagram</a></li>
+			<li><a href="mailto:matheus.costa@aluno.ifsp.edu.br">Enviar E-mail</a></li>
+			<li><a href="https://www.facebook.com/breakmiudotheman">Facebook</a></li>
+			<li><a href="https://www.instagram.com/mrbreakmiudo">Instagram</a></li>
 			<nav>
 				<li><a href="#t1">Sobre mim</a></li>
 				<li><a href="#t2">Experiência</a></li>
@@ -115,12 +115,12 @@
 		
 		<h2 id="t3">Objetivos</h2>
 			<p style="color:blue" title="I'm a tooltip">
-			<b> Desejo aprofundar meus conhecimentos em SOA, especialmente microserviços, trabalhando com linguagens orientadas a objetos. Tabmém almejo exercer funções gerenciais e de negócio. </b>
+			<b> Desejo aprofundar meus conhecimentos em SOA, especialmente microserviços, trabalhando com linguagens orientadas a objetos. Também almejo exercer funções gerenciais e de negócio. </b>
 			</p>
 
 		<h2 id="t4">Contatos</h2>
 			<p style="color:blue" title="I'm a tooltip">
-			<b> E-mail: MrBreakMiude@gmail.com <br> Celular:11-94363-2748 <br> Residencial: 11-2847-3849 </b>
+			<b> E-mail: MrBreakMiudo@gmail.com <br> Celular:11-94363-2748 <br> Residencial: 11-2847-3849 </b>
 			</p>			
 			
 		
