--- a/MeuSite/bio.html
+++ b/MeuSite/bio.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="site.css">
 		<title>BIOGRAFIA</title>
 	</head>
-	<body>
+	<body>	
 		<h1>Matheus Costa</h1>
 		<img src="download.jpg" alt="ME" width="150" height="150">
 		<br><button>Download</button>
@@ -31,6 +31,7 @@
 		
 		
 		<h2 id="t1">Sobre mim</h2>
+		<div>
 		
 			<p style="color:blue" title="I'm a tooltip">
 			<b> Nascido em São Cristóvão, morador de Madureira
@@ -108,7 +109,14 @@
 			<br>Que nem a parteira falou </b>
 			</p>
 		
+		
 		<h2 id="t2">Experiência</h2>
+		<blockquote>
+		<p style="color:blue" title="'Tis a quote!">
+			<b> "O Sr Break Miudo foi o melhor homem de negócios com quem já fiz negócios." </b>
+			<cite>Ex-chefe
+			</p>
+		</blockquote>
 			<p style="color:blue" title="I'm a tooltip">
 			<b> Trabalho no ramo de TI há mais de 10 anos, tendo participado de projetos de desenvolvimento de software e arquitetura de sistemas. </b>
 			</p>
@@ -121,8 +129,12 @@
 		<h2 id="t4">Contatos</h2>
 			<p style="color:blue" title="I'm a tooltip">
 			<b> E-mail: MrBreakMiudo@gmail.com <br> Celular:11-94363-2748 <br> Residencial: 11-2847-3849 </b>
-			</p>			
-			
+			</p>
+		</div>
+		
+		<footer>	
+				&copy; Matheus 2019
+		</footer>
 		
 	</body>
 </html>
