--- a/MeuSite/bio.html
+++ b/MeuSite/bio.html
@@ -7,30 +7,10 @@
 		<link rel="stylesheet" href="site.css">
 		<title>BIOGRAFIA</title>
 	</head>
-	<body>	
-		<h1>Matheus Costa</h1>
-		<img src="download.jpg" alt="ME" width="150" height="150">
-		<br><button>Download</button>
-	
-	
-		<!--
-		COMENTÁRIO...
-		-->
+			
+		<h1>Sobre mim</h1>
 		
-		<ul>
-			<li><a href="mailto:matheus.costa@aluno.ifsp.edu.br">Enviar E-mail</a></li>
-			<li><a href="https://www.facebook.com/breakmiudotheman">Facebook</a></li>
-			<li><a href="https://www.instagram.com/mrbreakmiudo">Instagram</a></li>
-			<nav>
-				<li><a href="#t1">Sobre mim</a></li>
-				<li><a href="#t2">Experiência</a></li>
-				<li><a href="#t3">Objetivos</a></li>
-				<li><a href="#t4">Contatos</a></li>
-			</nav>
-		</ul>
-		
-		
-		<h2 id="t1">Sobre mim</h2>
+	<main>	
 		<div>
 		
 			<p style="color:blue" title="I'm a tooltip">
@@ -108,31 +88,34 @@
 			<br>Eu quero ver se tu é homem mané
 			<br>Que nem a parteira falou </b>
 			</p>
-		
-		
-		<h2 id="t2">Experiência</h2>
+		</main>
 		<blockquote>
 		<p style="color:blue" title="'Tis a quote!">
 			<b> "O Sr Break Miudo foi o melhor homem de negócios com quem já fiz negócios." </b>
 			<cite>Ex-chefe
 			</p>
 		</blockquote>
-			<p style="color:blue" title="I'm a tooltip">
-			<b> Trabalho no ramo de TI há mais de 10 anos, tendo participado de projetos de desenvolvimento de software e arquitetura de sistemas. </b>
-			</p>
 		
-		<h2 id="t3">Objetivos</h2>
-			<p style="color:blue" title="I'm a tooltip">
-			<b> Desejo aprofundar meus conhecimentos em SOA, especialmente microserviços, trabalhando com linguagens orientadas a objetos. Também almejo exercer funções gerenciais e de negócio. </b>
-			</p>
-
-		<h2 id="t4">Contatos</h2>
-			<p style="color:blue" title="I'm a tooltip">
-			<b> E-mail: MrBreakMiudo@gmail.com <br> Celular:11-94363-2748 <br> Residencial: 11-2847-3849 </b>
-			</p>
-		</div>
+		<aside>	
+			<h2>Matheus Costa</h2>
+			
+			<nav>
+				<ul style="list-style-type:none;">
+			
+				<li><a href="index.html">Home</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="bio.html">Sobre mim</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="contato.html">Contato</a></li>
+				<img src="Imagens/github.png" alt="GitHub link" href="https://github.com/matheuscostaIFSP/breakmiudo">
+				<img src="Imagens/linkedin.png" alt="GitHub link" href="https://linkedin.com/matheus.costa">
+				<img src="Imagens/twitter.png" alt="GitHub link" href="https://twitter.com/mathmcosta">
+			</ul>
+			</nav>
+		</aside>
 		
-		<footer>	
+		<footer>
+		
 				&copy; Matheus 2019
 		</footer>
 		
