--- a/MeuSite/bio.html
+++ b/MeuSite/bio.html
@@ -8,9 +8,9 @@
 		<link rel="stylesheet" href="css/site.css">
 		<title>BIOGRAFIA</title>
 	</head>
-			
+	<body>		
 		<h1>Sobre mim</h1>
-		
+	
 	<main>	
 		<div>
 		
@@ -97,20 +97,35 @@
 			</p>
 		</blockquote>
 		
+		<h2 id="t2">Experiência</h2>
+		<div>
+			<p style="color:blue" title="I'm a tooltip">
+			<b> Trabalho no ramo de TI há mais de 10 anos, tendo participado de projetos de desenvolvimento de software e arquitetura de sistemas. </b>
+			</p>
+		</div>
+		<h2 id="t3">Objetivos</h2>
+		<div>	
+			<p style="color:blue" title="I'm a tooltip">
+			<b> Desejo aprofundar meus conhecimentos em SOA, especialmente microserviços, trabalhando com linguagens orientadas a objetos. Também almejo exercer funções gerenciais e de negócio. </b>
+			</p>
+		</div>
+		
+		</body>
+		
 		<aside>	
 			<h2>Matheus Costa</h2>
 			
 			<nav>
-				<ul style="list-style-type:none;">
+				<ul>
 			
 				<li><a href="index.html">Home</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="bio.html">Sobre mim</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contato.html">Contato</a></li>
-				<img src="Imagens/github.png" alt="GitHub link" href="https://github.com/matheuscostaIFSP/breakmiudo">
-				<img src="Imagens/linkedin.png" alt="GitHub link" href="https://linkedin.com/matheus.costa">
-				<img src="Imagens/twitter.png" alt="GitHub link" href="https://twitter.com/mathmcosta">
+				<img src="Imagens/github.png" alt="GitHub link">
+				<img src="Imagens/linkedin.png" alt="GitHub link">
+				<img src="Imagens/twitter.png" alt="GitHub link">
 			</ul>
 			</nav>
 		</aside>
@@ -120,5 +135,4 @@
 				&copy; Matheus 2019
 		</footer>
 		
-	</body>
 </html>
