--- a/MeuSite/bio.html
+++ b/MeuSite/bio.html
@@ -9,109 +9,120 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
 		<title>Biografia</title>
 	</head>
-	<body>		
+	<body class="grid-container">
+		<header>
 		<h1>Sobre mim</h1>
-	
-	<main>	
-		<div>
-		
-			<p style="color:blue" title="I'm a tooltip">
-			<b> Nascido em São Cristóvão, morador de Madureira
-			<br>Desde pequeno acostumado a subir ladeira
-			<br>Me lembro muito bem dos meus tempos de moleque
-			<br>Que sempre passava as férias no final do 77
-			<br>Padre Miguel sempre dez na bateria
-			<br>Saudoso Mestre André, sempre soube o que queria
-			<br>Futebol na rua F ou no campo de baixo
-			<br>Você sabe, meu tio gentil era um esculacho
-			<br>Eu andava pelas ruas vestindo o meu bate bola
-			<br>Se tu passasse em minha frente era melhor tu sair fora
-			<br>Carnaval de rua, perigoso e divertido
-			<br>Mas passei por tudo isso entre mortos e feridos
-			<br>Graças ao meu pai, o pessoal da tramela
-			<br>Sérgio Cabrito, meu padrinho não dava trégua
-			<br>Lembra do Cassino Bangu, de vez em quando eu ia lá
-			<br>Curtir um funk, ver a mulherada rebolar
-			<br>Kool and the Gang, Gap Band
-			<br>Outro mestre, James Brown
-			<br>Era só alegria, não tinha pau
-			<br>Eu quero ver se tu é homem, mané
-			<br>Do jeito que eu fui e que eu sou
-			<br>Eu quero ver se tu é homem, mané
-			<br>Que nem a parteira falou
-			<br>Eu quero ver se tu é homem, mané
-			<br>Do jeito que eu fui e que eu sou
-			<br>Eu quero ver se tu é homem, mané
-			<br>Que nem a parteira falou
-			<br>No Andaraí, Grajaú o bicho pegava mais
-			<br>Quando pichava muro sempre tinha um correndo atrás
-			<br>Carlos Peixe, meu camarada
-			<br>De vez em quando no piche, outras na baforada
-			<br>Vida de moleque sempre sangue bom
-			<br>Calote no ônibus pra ir à praia no verão
-			<br>Pra ficar um pouco mais roubava no supermercado
-			<br>Foda-se, pra mim isso nunca foi pecado
-			<br>Sempre no Maraca vendo o Mengão jogar
-			<br>Zico, Adílio, Júnior, fazendo a bola rolar
-			<br>Como já diz o hino, vou repetir com vocês
-			<br>Uma vez Flamengo, Flamengo até morrer
-			<br>Meu avô Peixoto deixou meu sangue rubro-negro
-			<br>Me orgulho de ser carioca, me orgulho de ser brasileiro
-			<br>Skate na veia, só quem tem sabe como é que é a sensação
-			<br>E o poder de dar um ollie-air
-			<br>Campo Grande, Norte Shopping, Street no Méier
-			<br>À noite Circo Voador, show do De Falla e um Domec
-			<br>Vender Camisa na 13 de Maio
-			<br>Na situação show no Garage
-			<br>Skunk, diversão de irmão
-			<br>Grandmaster Flash, Afrika Bambaata, Planet Rock
-			<br>Rap, break, graffiti
-			<br>Chegou o hip hop
-			<br>Cantando a vida mas vista por outro lado
-			<br>Não é apologia, cumpadi, não adianta ficar bolado
-			<br>Entenda se a minha rima não te faz rir
-			<br>Não é apologia parceiro, não adianta, sai daqui
-			<br>Eu vim pra zoar, fazer barulho
-			<br>Falar um pouco de mulher
-			<br>Skate, som, bagulho
-			<br>Sempre ligado, sempre sabendo o que quer
-			<br>Sempre bom da cabeça, nunca doente do pé
-			<br>Eu vou levando a vida
-			<br>Juro que vou
-			<br>Só no sapato, sempre sendo o que sou
-			<br>Eu quero ver se tu é homem, mané
-			<br>Do jeito que eu fui e que eu sou
-			<br>Eu quero ver se tu é homem mané
-			<br>Do jeito que eu fui e que eu sou
-			<br>Eu quero ver se tu é homem mané
-			<br>Que nem a parteira falou
-			<br>Eu quero ver se tu é homem, mané
-			<br>Do jeito que eu fui e que eu sou
-			<br>Eu quero ver se tu é homem mané
-			<br>Que nem a parteira falou </b>
-			</p>
+		</header>
+		<main>
+			<section>
+			<div>
+				<p style="color:blue" title="I'm a tooltip">
+				<b> Nascido em São Cristóvão, morador de Madureira
+				<br>Desde pequeno acostumado a subir ladeira
+				<br>Me lembro muito bem dos meus tempos de moleque
+				<br>Que sempre passava as férias no final do 77
+				<br>Padre Miguel sempre dez na bateria
+				<br>Saudoso Mestre André, sempre soube o que queria
+				<br>Futebol na rua F ou no campo de baixo
+				<br>Você sabe, meu tio gentil era um esculacho
+				<br>Eu andava pelas ruas vestindo o meu bate bola
+				<br>Se tu passasse em minha frente era melhor tu sair fora
+				<br>Carnaval de rua, perigoso e divertido
+				<br>Mas passei por tudo isso entre mortos e feridos
+				<br>Graças ao meu pai, o pessoal da tramela
+				<br>Sérgio Cabrito, meu padrinho não dava trégua
+				<br>Lembra do Cassino Bangu, de vez em quando eu ia lá
+				<br>Curtir um funk, ver a mulherada rebolar
+				<br>Kool and the Gang, Gap Band
+				<br>Outro mestre, James Brown
+				<br>Era só alegria, não tinha pau
+				<br>Eu quero ver se tu é homem, mané
+				<br>Do jeito que eu fui e que eu sou
+				<br>Eu quero ver se tu é homem, mané
+				<br>Que nem a parteira falou
+				<br>Eu quero ver se tu é homem, mané
+				<br>Do jeito que eu fui e que eu sou
+				<br>Eu quero ver se tu é homem, mané
+				<br>Que nem a parteira falou
+				<br>No Andaraí, Grajaú o bicho pegava mais
+				<br>Quando pichava muro sempre tinha um correndo atrás
+				<br>Carlos Peixe, meu camarada
+				<br>De vez em quando no piche, outras na baforada
+				<br>Vida de moleque sempre sangue bom
+				<br>Calote no ônibus pra ir à praia no verão
+				<br>Pra ficar um pouco mais roubava no supermercado
+				<br>Foda-se, pra mim isso nunca foi pecado
+				<br>Sempre no Maraca vendo o Mengão jogar
+				<br>Zico, Adílio, Júnior, fazendo a bola rolar
+				<br>Como já diz o hino, vou repetir com vocês
+				<br>Uma vez Flamengo, Flamengo até morrer
+				<br>Meu avô Peixoto deixou meu sangue rubro-negro
+				<br>Me orgulho de ser carioca, me orgulho de ser brasileiro
+				<br>Skate na veia, só quem tem sabe como é que é a sensação
+				<br>E o poder de dar um ollie-air
+				<br>Campo Grande, Norte Shopping, Street no Méier
+				<br>À noite Circo Voador, show do De Falla e um Domec
+				<br>Vender Camisa na 13 de Maio
+				<br>Na situação show no Garage
+				<br>Skunk, diversão de irmão
+				<br>Grandmaster Flash, Afrika Bambaata, Planet Rock
+				<br>Rap, break, graffiti
+				<br>Chegou o hip hop
+				<br>Cantando a vida mas vista por outro lado
+				<br>Não é apologia, cumpadi, não adianta ficar bolado
+				<br>Entenda se a minha rima não te faz rir
+				<br>Não é apologia parceiro, não adianta, sai daqui
+				<br>Eu vim pra zoar, fazer barulho
+				<br>Falar um pouco de mulher
+				<br>Skate, som, bagulho
+				<br>Sempre ligado, sempre sabendo o que quer
+				<br>Sempre bom da cabeça, nunca doente do pé
+				<br>Eu vou levando a vida
+				<br>Juro que vou
+				<br>Só no sapato, sempre sendo o que sou
+				<br>Eu quero ver se tu é homem, mané
+				<br>Do jeito que eu fui e que eu sou
+				<br>Eu quero ver se tu é homem mané
+				<br>Do jeito que eu fui e que eu sou
+				<br>Eu quero ver se tu é homem mané
+				<br>Que nem a parteira falou
+				<br>Eu quero ver se tu é homem, mané
+				<br>Do jeito que eu fui e que eu sou
+				<br>Eu quero ver se tu é homem mané
+				<br>Que nem a parteira falou </b>
+				</p>
+			</div>
+			</section>
+			
+			<section>
+			<blockquote>
+			<p style="color:blue" title="'Tis a quote!">
+				<b> "O Sr Break Miudo foi o melhor homem de negócios com quem já fiz negócios." </b>
+				<cite>Ex-chefe
+				</p>
+			</blockquote>
+			</section>
+			
+			<section>
+			<h2 id="t2">Experiência</h2>
+			<div>
+				<p style="color:blue" title="I'm a tooltip">
+				<b> Trabalho no ramo de TI há mais de 10 anos, tendo participado de projetos de desenvolvimento de software e arquitetura de sistemas. </b>
+				</p>
+			</div>
+			</section>
+			
+			<section>
+			<h2 id="t3">Objetivos</h2>
+			<div>	
+				<p style="color:blue" title="I'm a tooltip">
+				<b> Desejo aprofundar meus conhecimentos em SOA, especialmente microserviços, trabalhando com linguagens orientadas a objetos. Também almejo exercer funções gerenciais e de negócio. </b>
+				</p>
+			</div>
+			</section>
+			
 		</main>
-		<blockquote>
-		<p style="color:blue" title="'Tis a quote!">
-			<b> "O Sr Break Miudo foi o melhor homem de negócios com quem já fiz negócios." </b>
-			<cite>Ex-chefe
-			</p>
-		</blockquote>
 		
-		<h2 id="t2">Experiência</h2>
-		<div>
-			<p style="color:blue" title="I'm a tooltip">
-			<b> Trabalho no ramo de TI há mais de 10 anos, tendo participado de projetos de desenvolvimento de software e arquitetura de sistemas. </b>
-			</p>
-		</div>
-		<h2 id="t3">Objetivos</h2>
-		<div>	
-			<p style="color:blue" title="I'm a tooltip">
-			<b> Desejo aprofundar meus conhecimentos em SOA, especialmente microserviços, trabalhando com linguagens orientadas a objetos. Também almejo exercer funções gerenciais e de negócio. </b>
-			</p>
-		</div>
-		
-		</body>
 		
 		<aside>	
 			<h2>Matheus Costa</h2>
@@ -136,5 +147,5 @@
 		
 				&copy; Matheus 2019
 		</footer>
-		
+	</body>	
 </html>
