Tentativa de realizar atividade 05

--- a/MeuSite/bio.html
+++ b/MeuSite/bio.html
@@ -121,6 +121,57 @@
 			</div>
 			</section>
 			
+			<section>
+			<h2>Habilidades</h2>
+			<style> table { border: 4px solid white; border-collapse: collapse; } td { border: 4px solid white; padding: 5px 10px; } thead { color: white; background-color: #851944; } th{ border: 4px solid white; } tfoot { background-color: lightgreen; } </style>
+			<table>
+				<thead>
+					<tr>
+						<th> Habilidade </th>
+						<th> Nivel </th>
+						<th> Experiencias </th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td> HTML5 </td>
+						<td> Inicial </td>
+						<td> Fase de aprendizado </td>
+					</tr>
+					<tr>
+						<td> CSS3 </td>
+						<td> Inicial </td>
+						<td> Fase de aprendizado </td>
+					</tr>
+					<tr>
+						<td> JavaScript </td>
+						<td> Inicial </td>
+						<td> Fase de aprendizado </td>
+					</tr>
+					<tr>
+						<td> Design </td>
+						<td> Inicial </td>
+						<td> Fase de aprendizado </td>
+					</tr>
+					<tr>
+						<td> Git </td>
+						<td> Inicial </td>
+						<td> Fase de aprendizado </td>
+					</tr>
+					<tr>
+						<td> Angular </td>
+						<td> Inicial </td>
+						<td> Fase de aprendizado </td>
+					</tr>
+					<tr>
+						<td> Java </td>
+						<td> Inicial </td>
+						<td> Fase de aprendizado </td>
+					</tr>
+				</tbody>
+
+			</table>
+			</section>
 		</main>
 		
 		
